更新测试文件

--- a/doc/test_doc/本地模型测试报告.md
+++ b/doc/test_doc/本地模型测试报告.md
@@ -1,34 +1,26 @@
 ### 在macbook 21pro(m1pro芯片上进行推理的测试成绩如下)
-#### 性能测试结果:
----
-总推理次数: 20
-平均推理时间: 3.894 秒
-最快推理时间: 1.374 秒
-最慢推理时间: 5.217 秒
-总计用时: 77.876 秒
+第1次: 0.575秒
+第2次: 1.812秒
+第3次: 2.564秒
+第4次: 2.540秒
+第5次: 2.502秒
+第6次: 1.874秒
+第7次: 2.627秒
+第8次: 2.545秒
+第9次: 2.487秒
+第10次: 2.485秒
+第11次: 0.324秒
+第12次: 2.730秒
+第13次: 2.592秒
+第14次: 2.580秒
+第15次: 2.764秒
+第16次: 0.916秒
+第17次: 2.523秒
+第18次: 2.559秒
+第19次: 2.501秒
+第20次: 2.508秒
 
----
-
-详细时间列表:
-第  1 次: 2.144 秒
-第  2 次: 1.934 秒
-第  3 次: 4.851 秒
-第  4 次: 4.859 秒
-第  5 次: 4.866 秒
-第  6 次: 1.560 秒
-第  7 次: 4.934 秒
-第  8 次: 3.880 秒
-第  9 次: 5.163 秒
-第 10 次: 5.217 秒
-第 11 次: 1.374 秒
-第 12 次: 2.535 秒
-第 13 次: 4.911 秒
-第 14 次: 4.857 秒
-第 15 次: 4.902 秒
-第 16 次: 1.956 秒
-第 17 次: 5.012 秒
-第 18 次: 2.910 秒
-第 19 次: 4.986 秒
-第 20 次: 5.026 秒
-
+平均时间: 2.200秒
+最快: 0.324秒
+最慢: 2.764秒
 
